# monolathe

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  get_script_id.py  inspect_script.py  pyproject.toml
config/channels/: history_mysteries.yaml  tech_explained.yaml  unsolved_files.yaml
config/prompts/: safety_check.j2
deployments/mini/: Dockerfile
deployments/studio/: celery_worker.service  com.monolathe.mlx.plist.template  com.monolathe.mlx_server.plist  com.monolathe.worker.plist.template  install_service.sh  mlx_server.service
docs/: phase2_summary.md  phase3_plan.json  phase3_summary.md  phase4_summary.md
monolathe/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
monolathe/config/channels/: reddit_stories.yaml
monolathe/config/prompts/: hook_generator.j2  script_writer.j2
monolathe/deployments/monitoring/: docker-compose.monitoring.yml
monolathe/docs/: PROJECT_SUMMARY.md  phase2_reels_plan.json
monolathe/migrations/: script.py.mako
monolathe/migrations/versions/: 001_initial.py
monolathe/src/: celery_app.py
monolathe/src/api/: __init__.py  main.py
monolathe/src/assetfactory/: mlx_server.py  tasks.py
monolathe/src/channelmanager/: __init__.py
monolathe/src/complianceguard/: __init__.py  policy_enforcer.py
monolathe/src/distributor/: tasks.py  tasks_reels.py  trending_audio.py  upload_queue.py
monolathe/src/postproduction/: __init__.py  tasks_reels.py
monolathe/src/scheduler/: __init__.py  multi_channel.py
monolathe/src/shared/: __init__.py  logger.py
monolathe/tests/: conftest.py  test_phase3_quantitative.py
monolathe/tests/chaos/: test_chaos.py
monolathe/tests/e2e/: test_pipeline.py
scripts/: setup_mini.sh  setup_studio.sh
siliconcurtain/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
siliconcurtain/config/channels/: finance_guru.yaml
siliconcurtain/config/prompts/: seo_metadata.j2
siliconcurtain/deployments/mini/: Dockerfile
siliconcurtain/deployments/monitoring/: docker-compose.monitoring.yml
siliconcurtain/deployments/studio/: celery_worker.service  install_service.sh  mlx_server.service
siliconcurtain/docs/: PROJECT_SUMMARY.md  phase2_summary.md  phase3_summary.md  phase4_plan.json  phase4_summary.md
siliconcurtain/migrations/: env.py
siliconcurtain/src/: __init__.py  celery_app.py
siliconcurtain/src/api/: __init__.py  main.py
siliconcurtain/src/assetfactory/: __init__.py  tasks_reels.py
siliconcurtain/src/channelmanager/: docker_manager.py
siliconcurtain/src/scriptforge/: __init__.py  (+1 more)
siliconcurtain/tests/: __init__.py
src/: __init__.py  celery_app.py
src/api/: main.py
src/assetfactory/: tasks.py
src/distributor/: __init__.py  ab_testing.py  oauth_manager.py
src/postproduction/: reels_assembler.py  tasks.py
src/scriptforge/: prompts.py
src/shared/: circuit_breaker.py  config.py  disaster_recovery.py  logging_loki.py  metrics.py
src/trendscout/: __init__.py
tests/: __init__.py  conftest.py  test_phase2_quantitative.py  test_phase4_quantitative.py
tests/load/: locustfile.py
tests/unit/: test_circuit_breaker.py  test_config.py  test_models.py  test_prompts.py
(+30 files in other folders)
